--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
-
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -24,9 +23,10 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   },
-  "homepage":"https://github.com/MoisesINMDeveloper/interactive-rating-component.git"
+  "homepage": "https://github.com/MoisesINMDeveloper/interactive-rating-component.git"
 }
